Temporary fix to avoid the edit bar overflowing, which messes up the front page
git-svn-id: https://svn.syslab.com/svn/syslabcom/recensio.theme/trunk@7219 51ee9ba4-e84d-4896-84de-354f1821c169

--- a/recensio/theme/browser/stylesheets/main.css
+++ b/recensio/theme/browser/stylesheets/main.css
@@ -1047,6 +1047,7 @@ min-height:2.5em;
 background-color:#BC5C10;
 float:left;
 margin:0.5em 0 0;
+padding: 0;
 }
 #content-views li {
     display:inline;
